--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,4 +4,10 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    #header
+      h1 Samaritan
+      input(type='text')
+      a(href='#')
+        img(src='images/profile.png')
+    #content
+      block content
