Create header links

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,9 +5,10 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     #header
-      h1 Samaritan
+      a(href='/')
+        h1 Samaritan
       input(type='text')
-      a(href='#')
+      a(href='users')
         img(src='images/profile.png')
     #content
       block content
