--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -10,6 +10,11 @@ body {
     height: 50px;
     background-color: #E6E6E6;
 
+    a {
+        color: black;
+        text-decoration: none;
+    }
+
     input {
         width: 50%;
         font-size: 20px;
