Create a users page that can logout

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -88,3 +88,11 @@ body {
         margin-left: 20px;
     }
 }
+
+#users {
+    img {
+        width: 60px; height: 60px;
+        border-radius: 30px;
+        border: 1px solid #CCC;
+    }
+}
