--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -96,3 +96,23 @@ body {
         border: 1px solid #CCC;
     }
 }
+
+#request form {
+    height: 300px;
+    width: 70%;
+
+    > * {
+        display: block;
+        margin-bottom: 10px;
+        width: 70%;
+    }
+
+    div {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    textarea {
+        height: 100px;
+    }
+}
