Create author field per requests

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -53,6 +53,17 @@ body {
         align-items: center;
         justify-content: space-between;
 
+        div:first-child {
+            * {
+                display: inline;
+            }
+
+            p {
+                margin-left: 5px;
+                font-style: italic;
+            }
+        }
+
         .rsvp_info {
             display: flex;
             flex-direction: column;
