--- a/views/request.pug
+++ b/views/request.pug
@@ -4,8 +4,9 @@ block content
   #request
     h2 Make your own request
     form(method='post', action='/request')
+      input(type='text', name='title', placeholder='Title' required)
       div
-        input(type='text', name='title', placeholder='Title' required)
+        input(type='time', name='time' required)
         input(type='date', name='date' required)
       input(type='text', name='location', placeholder='Address' required)
       textarea(placeholder='What do you need?' required)
