--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,3 +1,5 @@
+@highlight: #658882;
+
 body {
   font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
   margin: 0;
@@ -11,7 +13,7 @@ body {
     background-color: #E6E6E6;
 
     a {
-        color: black;
+        color: @highlight;
         text-decoration: none;
     }
 
@@ -32,11 +34,38 @@ body {
     padding: 10px 5px 0 40%;
 }
 
+#index {
+    display: table;
+
+    #feed {
+        display: table-cell;
+        width: 60%;
+    }
+
+    > div:last-child {
+        display: table-cell;
+        text-align: right;
+        padding-right: 20px;
+
+        a {
+            padding: 5px;
+            border: 2px solid darken(@highlight, 20%);
+            border-radius: 2px;
+            text-decoration: none;
+            color: black;
+
+            &:hover {
+                background-color: @highlight;
+            }
+        }
+    }
+}
+
 .request {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    max-width: 50%;
+    max-width: 100%;
     min-height: 100px;
     width: 500px;
     margin-top: 10px;
