Resize the Create Request submit button

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -147,12 +147,17 @@ body {
         width: 70%;
     }
 
-    div {
-        display: flex;
-        justify-content: space-between;
-    }
-
     textarea {
         height: 100px;
+    }
+
+    div:last-child {
+        width: 70%;
+        text-align: center;
+    }
+
+    input[type=submit] {
+        width: 120px;
+        margin: 0 auto;
     }
 }
