--- a/views/request.pug
+++ b/views/request.pug
@@ -10,4 +10,5 @@ block content
         input(type='date', name='date' required)
       input(type='text', name='location', placeholder='Address' required)
       textarea(placeholder='What do you need?' required)
-      input(type='submit', value='Create Request')
+      div
+        input(type='submit', value='Create Request')
