Fix mixins.pug error with author field

--- a/views/mixins.pug
+++ b/views/mixins.pug
@@ -3,7 +3,7 @@ mixin request(title, author, time, distance, content, current, total)
     .title
       div
         h2= title
-        p.author from ${author}
+        p.author from #{author}
       .rsvp_info
         p.time= time
         p.distance= distance
