Remove extraneous pug commas

--- a/views/mixins.pug
+++ b/views/mixins.pug
@@ -10,4 +10,4 @@ mixin request(title, author, time, distance, content, current, total)
     p.content= content
     .response
       p.label= current + '/' + total
-      input(type='button', value='I will help')
+      input(type='button' value='I will help')
