--- a/views/users.pug
+++ b/views/users.pug
@@ -4,5 +4,5 @@ block content
   #users
     img(src='images/profile.png')
     h2= username
-    form(method='post', action='/users')
-      input(type='submit', value='Logout')
+    form(method='post' action='/users')
+      input(type='submit' value='Logout')
