--- a/views/login.pug
+++ b/views/login.pug
@@ -3,6 +3,6 @@ extend layout
 block content
   #login
     h2 Welcome to Samaritan!
-    form(method='post', action='login')
-      input(type='text', name='username', placeholder='Name')
-      input(type='submit', value='Login')
+    form(method='post' action='login')
+      input(type='text' name='username' placeholder='Name')
+      input(type='submit' value='Login')
