Create a button for the searchbar

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -17,9 +17,27 @@ body {
         text-decoration: none;
     }
 
-    input {
+    form {
+        display: flex;
         width: 50%;
-        font-size: 20px;
+
+        * {
+            vertical-align: middle;
+        }
+
+        input[type=text] {
+            flex-grow: 1;
+            font-size: 20px;
+            margin-right: 5px;
+        }
+
+        input[type=submit] {
+            flex-grow: 0;
+            width: 80px;
+            height: 30px;
+            text-align: center;
+            white-space: normal;
+        }
     }
 
     img {
