--- a/views/mixins.pug
+++ b/views/mixins.pug
@@ -1,4 +1,4 @@
-mixin request(id, title, author, time, distance, content, current, total)
+mixin request(uuid, title, author, time, distance, content, current, total)
   .request
     .title
       div
@@ -10,6 +10,6 @@ mixin request(id, title, author, time, distance, content, current, total)
     p.content= content
     .response
       p.label= current + '/' + total
-      form(method=post action='/help')
+      form(method='post' action='help')
         input(type='hidden' name='reqId' value=uuid)
         input(type='submit' value='I will help')
