Fix typo in request.pug

--- a/views/request.pug
+++ b/views/request.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   #request
     h2 Make your own request
-    form(method='post' action='/request')
+    form(method='post' action='request')
       input(type='text' name='title' placeholder='Title' required)
       div
         input(type='time' name='time' required)
