--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html
       a(href='/')
         h1 Samaritan
       form(method='get' action='/')
-        input(type='text' name='location' )
+        input(type='text' name='address')
         input(type='submit' value='Find Requests')
       a(href='users')
         img(src='images/profile.png')
