--- a/views/request.pug
+++ b/views/request.pug
@@ -3,12 +3,13 @@ extends layout
 block content
   #request
     h2 Make your own request
-    form(method='post' action='/request')
+    form(method='post' action='request')
       input(type='text' name='title' placeholder='Title' required)
       div
         input(type='time' name='time' required)
         input(type='date' name='date' required)
       input(type='text' name='location' placeholder='Address' required)
-      textarea(placeholder='What do you need?' required)
+      input(type='text' name='needed' placeholder='People needed' required)
+      textarea(placeholder='What do you need?' name='content' required)
       div
         input(type='submit' value='Create Request')
