--- a/views/request.pug
+++ b/views/request.pug
@@ -8,7 +8,7 @@ block content
       div
         input(type='time' name='time' required)
         input(type='date' name='date' required)
-      input(type='text' name='location' placeholder='Address' required)
+      input(type='text' name='address' placeholder='Address' required)
       input(type='text' name='needed' placeholder='People needed' required)
       textarea(placeholder='What do you need?' name='content' required)
       div
